update code and styles

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>Homework 3</title>
+        <title>Homework 5</title>
         <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&family=Roboto:wght@400;500;700;900&display=swap" />
         <link rel="stylesheet" href="css/styles.css">
     </head>
@@ -14,10 +14,10 @@
                 <nav>
                     <ul class="list">
                         <li>
-                            <a href="" class="link nav-link active">Studio</a>
+                            <a href="index.html" class="link nav-link active">Studio</a>
                         </li>
                         <li>
-                            <a href="" class="link nav-link">Portfolio</a>
+                            <a href="portfolio.html" class="link nav-link">Portfolio</a>
                         </li>
                         <li>
                             <a href="" class="link nav-link">Contact</a>
@@ -36,7 +36,7 @@
         </header>
 
         <main>
-            <section class="hero bg-dark">
+            <section class="hero">
                 <h1 class="hero-text">
                     Effective Solution<br />
                     for Your Business
