--- a/portfolio.html
+++ b/portfolio.html
@@ -14,10 +14,10 @@
                 <nav>
                     <ul class="list">
                         <li>
-                            <a href="" class="link nav-link active">Studio</a>
+                            <a href="index.html" class="link nav-link">Studio</a>
                         </li>
                         <li>
-                            <a href="" class="link nav-link">Portfolio</a>
+                            <a href="portfolio.html" class="link nav-link active">Portfolio</a>
                         </li>
                         <li>
                             <a href="" class="link nav-link">Contact</a>
@@ -47,67 +47,140 @@
 
                
                    <ul class="list">
-                        <li>
-                            <img src="./images/img (4).jpg" alt="">
+                        <li class="project">
+                            <div class="project-image">
+                                <img src="./images/img (4).jpg" alt="">
+                                <div class="project-image-caption">
+                                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eos distinctio nisi fugiat. 
+                                        Facilis delectus totam aspernatur enim rerum blanditiis incidunt voluptatibus magni sequi eligendi,
+                                         suscipit voluptates debitis reiciendis neque aliquam?
+                                    </p>
+                                </div>
+                            </div>
                             <div class="project-caption">
                                 <h3>Banking App Interface Concept</h3>
                                 <p>App</p>
                             </div>
                         </li>
-                        <li>
-                            <img src="./images/img (5).jpg" alt="">
+                        <li class="project">
+                            <div class="project-image">
+                                <img src="./images/img (5).jpg" alt="">
+                                <div class="project-image-caption">
+                                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Facere veritatis earum molestias, 
+                                        perspiciatis minus sapiente nesciunt accusamus. 
+                                        Ducimus expedita ipsa quia minus. Et, suscipit a dolorem neque cum velit consectetur.
+                                    </p>
+                                </div>
+                            </div>
                             <div class="project-caption">
-                                <h3>Banking App Interface Concept</h3>
+                                <h3>Cashless Payment</h3>
+                                <p>Marketing</p>
+                            </div>
+                        </li>
+                        <li class="project">
+                            <div class="project-image">
+                                <img src="./images/img (6).jpg" alt="">
+                                <div class="project-image-caption">
+                                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam molestias esse, 
+                                        illum nesciunt velit culpa nihil? Neque consectetur esse similique porro placeat dolorem,
+                                         quasi deserunt id, quos aliquam facere. Voluptatum?
+                                    </p>
+                                </div>
+                            </div>                       
+                            <div class="project-caption">
+                                <h3>Meditation App</h3>
                                 <p>App</p>
                             </div>
                         </li>
-                        <li>
-                            <img src="./images/img (6).jpg" alt="">
+                        <li class="project">
+                            <div class="project-image">
+                                <img src="./images/img (7).jpg" alt="">
+                                <div class="project-image-caption">
+                                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. 
+                                        Nemo labore a et numquam nobis neque non ipsa! Reprehenderit maxime doloribus nostrum. 
+                                        Repellendus nulla obcaecati officia ullam et perferendis cum blanditiis.
+                                 </p>
+                                </div>
+                            </div>
                             <div class="project-caption">
-                                <h3>Banking App Interface Concept</h3>
-                                <p>App</p>
+                                <h3>Taxi Service</h3>
+                                <p>Marketing</p>
                             </div>
                         </li>
-                        <li>
-                            <img src="./images/img (7).jpg" alt="">
+                        <li class="project">
+                            <div class="project-image">
+                                <img src="./images/img (10).jpg" alt="">
+                                <div class="project-image-caption">
+                                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Alias praesentium aliquam reprehenderit? Atque, modi. 
+                                        Ducimus, ea. Harum nobis veniam ullam quisquam beatae sint. 
+                                        Non atque similique saepe reiciendis reprehenderit amet?
+                                    </p>
+                                </div>
+                            </div>                           
                             <div class="project-caption">
-                                <h3>Banking App Interface Concept</h3>
-                                <p>App</p>
+                                <h3>Screen Illustrations</h3>
+                                <p>Design</p>
                             </div>
                         </li>
-                        <li>
-                            <img src="./images/img (10).jpg" alt="">
+                        <li class="project">
+                            <div class="project-image">
+                                <img src="./images/img (11).jpg" alt="">
+                                <div class="project-image-caption">
+                                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit.
+                                         Quos labore, excepturi accusamus itaque commodi, beatae, similique soluta optio molestiae numquam deserunt.
+                                         Quia obcaecati itaque delectus eligendi dolor odio, error exercitationem!
+                                    </p>
+                                </div>
+                            </div>                         
                             <div class="project-caption">
-                                <h3>Banking App Interface Concept</h3>
-                                <p>App</p>
+                                <h3>Online Courses</h3>
+                                <p>Marketing</p>
                             </div>
                         </li>
-                        <li>
-                            <img src="./images/img (11).jpg" alt="">
+                        <li class="project">
+                            <div class="project-image">
+                                <img src="./images/img (12).jpg" alt="">
+                                <div class="project-image-caption">
+                                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea esse sapiente a aliquid repellendus eius est quas soluta, 
+                                        non atque incidunt deserunt dignissimos, iusto asperiores nesciunt velit.
+                                         Animi, adipisci a.
+                                    </p>
+                                </div>
+                            </div>                          
                             <div class="project-caption">
-                                <h3>Banking App Interface Concept</h3>
-                                <p>App</p>
+                                <h3>Instagram Stories Concept</h3>
+                                <p>Design</p>
                             </div>
                         </li>
-                        <li>
-                            <img src="./images/img (12).jpg" alt="">
+                        <li class="project">
+                            <div class="project-image">
+                                <img src="./images/img (13).jpg" alt="">
+                                <div class="project-image-caption">
+                                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore dolore et excepturi consequuntur, 
+                                        libero enim ullam dicta in maiores corrupti perferendis error officia nam laborum vitae aliquam.
+                                         Error, assumenda amet.
+                                    </p>
+                                </div>
+                            </div>                           
                             <div class="project-caption">
-                                <h3>Banking App Interface Concept</h3>
-                                <p>App</p>
+                                <h3>Organic Food</h3>
+                                <p>Web Site</p>
                             </div>
                         </li>
-                        <li>
-                            <img src="./images/img (13).jpg" alt="">
-                            <div class="project-caption">
-                                <h3>Banking App Interface Concept</h3>
-                                <p>App</p>
+                        <li class="project">
+                            <div class="project-image">
+                                <img src="./images/img (14).jpg" alt="">
+                                <div class="project-image-caption">
+                                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Praesentium corrupti reprehenderit harum cupiditate quos nemo, 
+                                        odio repellat nobis accusantium mollitia eius 
+                                        quas doloribus magni ex, minus error fugiat in iusto.
+                                   </p>
+                                </div>
                             </div>
-                        </li>
-                        <li>
-                            <img src="./images/img (14).jpg" alt="">
+                            
                             <div class="project-caption">
-                                <h3>Banking App Interface Concept</h3>
-                                <p>App</p>
+                                <h3>Fresh Coffee</h3>
+                                <p>Web Site</p>
                             </div>
                         </li>
                    </ul>
