--- a/index.html
+++ b/index.html
@@ -41,7 +41,16 @@
                     Effective Solution<br />
                     for Your Business
                 </h1>
-                <button type="button" class="hero-btn">Order Service</button>
+                <button type="button" class="hero-btn" data-modal-open>Order Service</button>
+                <div class="backdrop is-hidden" data-modal>
+                    <div class="modal">
+                        <button class="modal-close-btn" data-modal-close>
+                            <svg width="18" height="18">
+                                <use href="./images/icons.svg#close"></use>
+                            </svg>
+                        </button>
+                    </div>
+                </div>
             </section>
 
             <section class="about section">
@@ -311,5 +320,6 @@
                     
         </div>    
         </footer>
+        <script src="./js/modal.js" type="text/javascript"></script>
     </body>
 </html>
